apps/lite/ui/src/routes/project/$id/workspace/OutlineTree.module.css
.section {
	padding: 6px;
	border-radius: var(--radius-l);
	background-color: var(--bg-2);
}

.addNewBranchButton {
	display: grid;
	padding-inline: 12px;
	padding-block: 10px;
	border-radius: var(--radius-l);
	background-color: var(--bg-2);
	color: var(--text-2);
	text-align: center;

	&:not([data-disabled]):hover {
		color: color-mix(in srgb, var(--text-2) 50%, var(--text-1));
	}

	& > * {
		grid-area: 1 / 1;
	}

	[data-icon] {
		justify-self: right;
	}

	&[data-disabled] {
		opacity: 0.5;
	}
}

.tree {
	display: grid;
	grid-template-rows: auto minmax(0, 1fr);
	grid-template-columns: minmax(0, 1fr);
	gap: 12px;

	&:focus {
		/* The focus state is displayed on the item row instead. */
		outline: none;
	}
}

.changesContainer {
	padding-inline: var(--panel-padding);
}

.stacksScroller {
	padding-inline: var(--panel-padding);
	padding-bottom: var(--panel-padding);
	scroll-padding: var(--panel-padding);
}

.stacks {
	display: flex;
	row-gap: 12px;
	flex-direction: column;
}

.segments {
	display: flex;
	flex-direction: column;
}

.segmentParentItemRow:last-child {
	height: 8px;
	min-height: auto;
	overflow: hidden;
}

.stack {
	display: flex;
	flex-direction: column;
	padding-bottom: 0;
}

.inlineEditorForm {
	display: flex;
	row-gap: 6px;
	flex-grow: 1;
	flex-direction: column;
	min-width: 0;
}

.inlineEditorInput {
	flex-grow: 1;

	/* We can't just inherit the colour from the label because empty commit
	messages use a different colour. */
	color: var(--text-1);
	&:focus {
		color: var(--fill-gray-fg);
	}

	textarea& {
		resize: none;
		field-sizing: content;
	}

	&:focus {
		outline: none;
	}
}

.inlineEditorHelp {
	display: flex;
	margin-left: -6px;
	font-size: 11px;
	line-height: 1.3;

	& > button {
		text-transform: lowercase;
	}
}

.inlineEditorShortcutLabel {
	opacity: 0.6;
}

.changesSection {
	display: flex;
	row-gap: 2px;
	flex-direction: column;
}

.commitControls {
	display: flex;
	row-gap: 2px;
	flex-direction: column;
}

.commitTextarea {
	resize: none;
	field-sizing: content;
	box-sizing: content-box;
	min-height: calc(2lh);
	max-height: calc(10lh);
	padding-inline: 8px;
	padding-block: 6px;

	&:focus {
		outline: none;
	}
}

.commitControlsFooter {
	display: flex;
	column-gap: 2px;
}

.commitDropdownButton {
	display: flex;

	& > * {
		overflow: hidden;
		background-color: var(--bg-1);
	}

	& > :first-child {
		border-right: 0;
		border-start-end-radius: 0;
		border-end-end-radius: 0;
	}

	& > :last-child {
		border-left: 1px solid color-mix(in srgb, var(--fill-gray-bg) 30%, transparent);
		border-start-start-radius: 0;
		border-end-start-radius: 0;
	}
}

.commitTargetComboboxTrigger {
	/* Override button inline-flex to fix overflow behaviour. */
	display: block;
	flex-grow: 1;
	overflow: hidden;
	background-color: var(--bg-1);
	text-overflow: ellipsis;
	white-space: nowrap;
}

.commitTargetComboboxPopup {
	display: flex;
	flex-direction: column;
	width: max(var(--anchor-width), 200px);
}

.commitTargetComboboxInput {
	padding-inline: 10px;
	padding-block: 4px;
	border-bottom: 1px solid var(--border-2);

	&:focus {
		outline: none;
	}
}

.commitTargetComboboxList {
	--approx-input-height: 50px;
	max-height: min(300px, calc(var(--available-height) - var(--approx-input-height)));
	overflow: auto;

	&:not(:empty) {
		padding-block: 4px;
	}
}

.commitTargetComboboxItem {
	padding-inline: 10px;
	padding-block: 4px;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
	cursor: default;

	&[data-highlighted] {
		background-color: var(--bg-2);
	}
}

.commitTargetComboboxEmpty {
	padding-inline: 10px;
	padding-block: 4px;
	color: var(--color-text-secondary);
}

.graphSegmentWithCheckbox {
	display: grid;
	justify-items: center;

	& > * {
		grid-area: 1 / 1;
	}
}

.commitCheckbox {
	margin-block-start: 7px;
	opacity: 0;

	.treeWithCheckedCommits &,
	.commitRow:hover &,
	&:focus {
		opacity: 1;
	}

	.tree:not(.treeWithCheckedCommits) &[data-disabled] {
		display: none;
	}
}

.itemRowContainer {
	display: grid;

	& > * {
		grid-area: 1 / 1;
		min-width: 0;
	}
}

.commitTargetIndicator {
	align-self: start;
	justify-self: start;
	margin-left: -15px;
	margin-block-start: 5px;
}

